deploy/dev-ngsa-asb-eastus/monitoring/thanos/thanos-store.yaml
# store-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store
  namespace: monitoring
  labels:
    app: thanos-store
    app.kubernetes.io/name: thanos-store
spec:
  serviceName: 'thanos-store'
  replicas: 1
  selector:
    matchLabels:
      app: thanos-store
      app.kubernetes.io/name: thanos-store
  template:
    metadata:
      labels:
        app: thanos-store
        app.kubernetes.io/name: thanos-store
    spec:
      containers:
        - name: thanos-store
          image: acraks3i2qzkkxofr7c.azurecr.io/thanos/thanos:v0.23.0
          args:
            - 'store'
            - '--log.level=debug'
            - '--data-dir=/var/thanos/store'
            - "--grpc-address=0.0.0.0:10901"
            - "--http-address=0.0.0.0:10902"
            - '--objstore.config-file=/config/thanos-storage-config.yaml'
          ports:
            - name: http
              containerPort: 10902
            - name: grpc
              containerPort: 10901
            - name: cluster
              containerPort: 10900
          volumeMounts:
            - name: config
              mountPath: /config/
              readOnly: true
            - name: data
              mountPath: /var/thanos/store
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          secret:
            secretName: thanos-objstore-config
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-store
  namespace: monitoring
  labels:
    app.kubernetes.io/name: thanos-store
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
  selector:
    app.kubernetes.io/name: thanos-store
